[gd_scene load_steps=4 format=3 uid="uid://barmdir8211mm"]

[ext_resource type="Texture2D" uid="uid://b5ehk2pbo55jo" path="res://mapa/Predio_2.5_roxo.png" id="1_qtqg7"]
[ext_resource type="Script" uid="uid://dd5ap0dvhyncg" path="res://predio.gd" id="2_10046"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqsyf"]
size = Vector2(369, 336)

[node name="Predio" type="Node2D"]
y_sort_enabled = true
script = ExtResource("2_10046")
sprite = ExtResource("1_qtqg7")

[node name="predio_sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -219)
texture = ExtResource("1_qtqg7")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, -219)
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, -48)
shape = SubResource("RectangleShape2D_gqsyf")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
